# $Id$ vim: ts=4

Griffith ChangeLog
------------------
(c) 2005-2011  Vasco Nunes, Piotr Ożarowski

2011-02-12  Vasco Nunes
	* Implemented MultiSelection support in MainTreeView
	* Re-implemented macosx menubar integration 

2011-02-10  Michael Jahn
	* [#716176] 0.12.1 No postgres support on Windows

2011-02-07  Ivo Nunes
	* Changed the way Mac OS X creates a new database so that it doesn't open external applications
	* Fixed exporting under Mac OS X

2011-02-06  Ivo Nunes
	* Fixed creating a new database and restoring backups under Mac OS X

2011-02-05  Vasco Nunes
	* [#703576] no automatic refresh after get back a dvd
	* Sync mac menubar when menu checkMenuItems are changed
	* Fixed about dialog on macosx

2011-02-05  Ivo Nunes
    * Fixed and re-enabled Mac OS X UI Cocoa menu integration
    * Mac OS X UI Cocoa menu integration temporarily disabled due to being broken - using native GTK
    * IMDB-pt plugin added

2011-02-03  Vasco Nunes
	* MoviePTGate plugin updated
	* Added MacOSX UI integration
	* Some minor macosx specific changes

2011-02-02  Michael Jahn
	* [#710860] cannot import imdb movie titles starting with a bracket
	* [#708472] Upgrade 0.11-0.12 fails with PostgreSQL
	* [#711015] [Enhancement][Plugin FilmAffinity] See the movie year in movie list

2011-02-01  Michael Jahn
	* HTML export: sorting entries case-insensitive and respect current locale settings

2011-01-25  Michael Jahn
	* [#300808] forgets some inputs in languages like codex&tracks

2011-01-21  Michael Jahn
	* drop-down combobox for resolution field

2011-01-19  Michael Jahn
	* [#700704] Incorrect dialog size for posters
	* [#493148] The Save button in the preferences window does not work well
    * open of the homepage from the about dialog fixed
    * enabling persons without email address

2011-01-17  Michael Jahn
	* [#703728] FilmAffinity: incomplete list of results

2011-01-16  Michael Jahn
	* [#697018] CSV import not working when number field not checked